fix map on mobile view

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -50,12 +50,8 @@
             display: block;
             flex-direction: column;
         }
-        #contact .contact-form {
-            height: 50;
-        }
         #contact .map {
             border-top: 4px solid #333;
-            width: 100%;
             height: 200px;
         }
     }
